--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -49,11 +49,15 @@ $fontS: .5em;
 }
 .bt-cnt {
     background-color: #F1F6F9;
-    width: 10em;
     text-align: center;
-    border: $keyColor solid 5px;
+    align-items: center;
+    border: $keyColor solid 2px;
     border-radius: 5px;
     margin: 5em 0;
+    font-size: 2em;
+    width: 10em;
+    height: 1em;
+    padding: .5%;
 }
 .bt-cnt:hover{
     background-color: #222831;
@@ -99,7 +103,6 @@ $fontS: .5em;
         text-decoration: none;
         text-align: center;
         align-content: center;
-        height: 3em;
         margin-bottom: 5em;
         transition: all 1s ease;
     }
