--- a/scss/home.scss
+++ b/scss/home.scss
@@ -56,6 +56,7 @@ margin-top: 2em;
   text-align: center;
   padding: 0% 35%;
   margin-top: -5%;
+  margin-bottom: 5em;
 }
 .art-hm{
   display: flex;
