--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -18,7 +18,7 @@ $keyColor: #F1F6F9;
     padding: 1em 1em;
     text-decoration: none;
     font-size: 1em;
-    transition: all 1s ease;
+    transition: all .5s ease;
   }
   .topnav a:hover {
     background-color: #393E4650;
