--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 .topnav {
   overflow: hidden;
   background-color: white;
@@ -18,7 +20,7 @@
   padding: 1em 1em;
   text-decoration: none;
   font-size: 1em;
-  transition: all 1s ease; }
+  transition: all .5s ease; }
 
 .topnav a:hover {
   background-color: #393E4650;
@@ -98,7 +100,8 @@ body {
     align-items: center;
     text-align: center;
     padding: 0% 35%;
-    margin-top: -5%; }
+    margin-top: -5%;
+    margin-bottom: 5em; }
   .art-hm {
     display: flex;
     flex-direction: column;
@@ -173,11 +176,15 @@ body {
     width: 5em; }
   .bt-cnt {
     background-color: #F1F6F9;
-    width: 10em;
     text-align: center;
-    border: #F1F6F9 solid 5px;
+    align-items: center;
+    border: #F1F6F9 solid 2px;
     border-radius: 5px;
-    margin: 5em 0; }
+    margin: 5em 0;
+    font-size: 2em;
+    width: 10em;
+    height: 1em;
+    padding: .5%; }
   .bt-cnt:hover {
     background-color: #222831;
     color: white; }
@@ -216,9 +223,248 @@ body {
     text-decoration: none;
     text-align: center;
     align-content: center;
-    height: 3em;
     margin-bottom: 5em;
     transition: all 1s ease; }
   .bt-cnt:hover {
     background-color: #222831;
     color: white; } }
+
+.hh-serv {
+  text-align: center; }
+
+.main-serv {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #F1F6F9; }
+
+.bt-pos {
+  position: relative;
+  bottom: 0;
+  margin-top: 2em;
+  height: 2em; }
+
+.boton-serv {
+  background-color: #222831;
+  color: #F1F6F9;
+  width: 25em;
+  height: 4em;
+  transition: all .5s ease; }
+
+.boton-serv:hover {
+  cursor: pointer;
+  background-color: #393E4620;
+  color: #393E46; }
+
+.sections-serv {
+  background-color: #393E46;
+  height: 8em;
+  color: #F1F6F9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 5%;
+  font-size: 1.5em; }
+
+.sectopms-serv2 {
+  width: 100%;
+  height: 10em;
+  background-color: #393E4650;
+  color: #F1F6F9;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  font-size: 1.5em; }
+
+.box-comp {
+  -webkit-box-shadow: 2px 6px 51px 25px rgba(0, 0, 0, 0.17);
+  -moz-box-shadow: 2px 6px 51px 25px rgba(0, 0, 0, 0.17);
+  box-shadow: 2px 6px 51px 25px rgba(0, 0, 0, 0.17);
+  width: 50em;
+  height: 40em;
+  border: #393E46 solid 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-content: flex-start;
+  margin: 4.4em;
+  text-align: center; }
+
+@media screen and (min-width: 600px) {
+  .hecon {
+    margin-top: 2em;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
+    margin-bottom: 2em; }
+  .hecon2 {
+    font-size: 1em;
+    justify-content: center;
+    text-align: center;
+    margin-top: 1em; }
+  .contact {
+    background-color: white;
+    width: 28em;
+    height: auto;
+    margin: 5em auto;
+    border-radius: 10px;
+    border: #393E46 solid;
+    padding-top: 3em;
+    padding-bottom: 1.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    -moz-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.3); }
+  .enva {
+    border-color: #393E4620;
+    transition: all .5s ease;
+    background-color: #393E4650;
+    color: #393E46; }
+  .enva:hover {
+    border: #222831 solid;
+    color: white;
+    background-color: #393E46;
+    -webkit-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    -moz-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.4); }
+  .formulario {
+    justify-content: center;
+    align-content: center;
+    text-align: center; }
+  input {
+    background-color: #393E4690;
+    width: 408px;
+    height: 40px;
+    border-radius: 5px;
+    border: #393E46 1px;
+    border-width: 1px;
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    color: white; }
+  textarea {
+    color: white;
+    background-color: #393E4690;
+    width: 405px;
+    height: 150px;
+    border-radius: 5px;
+    border-style: solid;
+    border: #393E46 1px;
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+    padding-top: 15px; }
+  label {
+    display: block;
+    float: center; }
+  button {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 2px;
+    margin-bottom: 2px;
+    margin-top: 1px;
+    text-transform: uppercase;
+    background-color: #393E46;
+    border: #393E46 solid;
+    border-radius: 10px;
+    width: 420px;
+    cursor: pointer; }
+  button p {
+    color: #fff; }
+  span {
+    color: #393E46; }
+  .frm {
+    background-color: #393E4650; }
+  .aviso {
+    font-size: 13px;
+    color: #0e0e0e; }
+  ::-webkit-input-placeholder {
+    color: white; }
+  ::-webkit-textarea-placeholder {
+    color: #393E4630;
+    background-color: #393E4610; }
+  .formulario input:focus {
+    outline: 0;
+    border: 1px solid #393E46; }
+  .formulario textarea:focus {
+    outline: 0;
+    border: 1px solid #393E46; } }
+
+@media screen and (max-width: 600px) {
+  #conten {
+    display: flex;
+    flex-direction: column;
+    width: 100%; }
+  #nave {
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-size: .8em; }
+  #main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 5px;
+    width: auto;
+    height: auto; }
+  #pie {
+    display: flex;
+    flex-direction: column;
+    background-color: #222831;
+    width: auto; }
+  .hecon {
+    margin-top: 3em;
+    display: flex;
+    justify-content: center;
+    text-align: center; }
+  .hecon2 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-content: center; }
+  .contact {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    border: #393E46 solid;
+    margin-top: 1em;
+    padding: 5%;
+    -moz-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.3); }
+  .formulario {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column; }
+  .enva {
+    border-color: #393E4620;
+    transition: all .5s ease;
+    background-color: #393E4650;
+    color: #393E46; }
+  .enva:hover {
+    border: #222831 solid;
+    color: white;
+    background-color: #393E46;
+    -webkit-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    -moz-box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.54);
+    box-shadow: 0px 4px 40px 4px rgba(0, 0, 0, 0.4); }
+  form {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding: 10%; }
+  .fut {
+    flex-wrap: wrap; }
+  input {
+    margin: 10% 0 0 0; }
+  textarea {
+    margin-top: 10%;
+    margin-bottom: 10%; } }
