--- a/style.css
+++ b/style.css
@@ -4,64 +4,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-.topnav {
-  overflow: hidden;
-  background-color: white;
-  flex-grow: 1;
-  -webkit-box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21);
-  -moz-box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21);
-  box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21); }
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #222831;
-  text-align: center;
-  padding: 1em 1em;
-  text-decoration: none;
-  font-size: 1em;
-  transition: all .5s ease; }
-
-.topnav a:hover {
-  background-color: #393E4650;
-  color: #222831; }
-
-.topnav a.active {
-  background-color: #03506F60;
-  color: black;
-  border-right: #393E46 solid 2px;
-  border-radius: 1px; }
-
-.topnav .icon {
-  display: none; }
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none; }
-  .topnav a.icon {
-    float: right;
-    display: block; } }
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative; }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0; }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left; } }
-
-body {
-  margin: 0%;
-  padding: 0%;
-  background-color: #F1F6F9;
-  text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-
 @media screen and (min-width: 600px) {
   .header-home {
     text-align: center;
@@ -142,6 +84,63 @@ body {
   .mockup {
     width: 25em; } }
 
+body {
+  margin: 0%;
+  padding: 0%;
+  background-color: #F1F6F9;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+
+.topnav {
+  overflow: hidden;
+  background-color: white;
+  flex-grow: 1;
+  -webkit-box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21);
+  -moz-box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21);
+  box-shadow: 6px 20px 64px 4px rgba(0, 0, 0, 0.21); }
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #222831;
+  text-align: center;
+  padding: 1em 1em;
+  text-decoration: none;
+  font-size: 1em;
+  transition: all .5s ease; }
+
+.topnav a:hover {
+  background-color: #393E4650;
+  color: #222831; }
+
+.topnav a.active {
+  background-color: #03506F60;
+  color: black;
+  border-right: #393E46 solid 2px;
+  border-radius: 1px; }
+
+.topnav .icon {
+  display: none; }
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
+    display: none; }
+  .topnav a.icon {
+    float: right;
+    display: block; } }
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative; }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0; }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left; } }
+
 @media screen and (min-width: 600px) {
   .posit-footer {
     position: relative;
@@ -185,9 +184,9 @@ body {
     font-size: 2em;
     width: 10em;
     padding: .5%; }
-  .bt-cnt:hover {
-    background-color: #222831;
-    color: #F1F6F9; }
+    .bt-cnt:hover {
+      background-color: #222831;
+      color: #F1F6F9; }
   .bt-cnt a:hover {
     color: #F1F6F9; }
   .rigths {
@@ -227,9 +226,9 @@ body {
     align-content: center;
     margin-bottom: 5em;
     transition: all 1s ease; }
-  .bt-cnt:hover {
-    background-color: #222831;
-    color: white; } }
+    .bt-cnt a:hover {
+      background-color: #222831;
+      color: white; } }
 
 @media screen and (min-width: 600px) {
   .hh-serv {
@@ -250,10 +249,10 @@ body {
     width: 25em;
     height: 4em;
     transition: all .5s ease; }
-  .boton-serv:hover {
-    cursor: pointer;
-    background-color: #393E4620;
-    color: #393E46; }
+    .boton-serv:hover {
+      cursor: pointer;
+      background-color: #393E4620;
+      color: #393E46; }
   .sections-serv {
     background-color: #393E46;
     height: 8em;
@@ -511,13 +510,13 @@ body {
     width: 40em;
     height: 20em;
     border-radius: 15px; }
-  .sec-qs:hover {
-    border-radius: 5px;
-    background-color: #393E4695;
-    border: #222831 solid .2em;
-    -webkit-box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3);
-    box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3); } }
+    .sec-qs:hover {
+      border-radius: 5px;
+      background-color: #393E4695;
+      border: #222831 solid .2em;
+      -webkit-box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3);
+      box-shadow: -1px 9px 5px 0px rgba(0, 0, 0, 0.3); } }
 
 @media screen and (max-width: 600px) {
   .hd-qs {
@@ -531,10 +530,10 @@ body {
     border-radius: 5px;
     margin: 0 0 2em 0;
     padding: 5%;
-    animation-name: example;
+    animation-name: breath;
     animation-duration: 10s;
     animation-iteration-count: infinite; }
-  @keyframes example {
+  @keyframes breath {
     0% {
       background-color: #F1F6F9; }
     25% {
@@ -546,3 +545,44 @@ body {
       background-color: #393E46; }
     100% {
       background-color: #F1F6F9; } } }
+
+/*extends*/
+.centrado, .centrado2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.cls-extend1, .cls-extend2, .cls-extend3 {
+  width: 20em;
+  height: 10em;
+  margin-top: 5em;
+  border: #393E46 solid 5px;
+  display: flex;
+  justify-content: center;
+  text-align: center; }
+
+.cls-extend2, .cls-extend3 {
+  margin-bottom: 5em;
+  padding: 2%; }
+
+.cls-extend3 {
+  background-color: aqua; }
+
+/*mixin*/
+h4 {
+  font-size: 5em;
+  color: aqua;
+  text-decoration: underline; }
+
+/*maps*/
+.centrado2 {
+  flex-direction: unset;
+  flex-wrap: wrap; }
+
+.secej {
+  width: 5em;
+  color: #4267B3;
+  background-color: #E9EBEE;
+  border: #4267B3 solid 5px;
+  margin: 2%; }
