--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -7,6 +7,9 @@ $mainFont: 'Open sans', 'sans-serif';
 $fontL: 2em;
 $fontM: 1.5em;
 $fontS: .5em;
+#parche{
+  margin-top: 15%;
+}
 @media screen and (min-width: 600px) {
     .hecon {
       margin-top: 2em;
@@ -55,7 +58,6 @@ $fontS: .5em;
       justify-content: center;
       align-content: center;
       text-align: center;
-    
     }
     
     input{
@@ -70,7 +72,6 @@ $fontS: .5em;
       margin-bottom: 20px; 
       color: white;
     }
-    
     textarea{
       color: white;
       background-color: #393E4690; 
@@ -130,6 +131,23 @@ $fontS: .5em;
       outline:0;
       border: 1px solid #393E46;
     }
+.navfut{
+  display: flex;
+  flex-direction: column;
+  color: $keyColor;
+  text-align: start;
+  text-decoration: underline;
+  margin-left: -60%;
+  padding-right: 20%;
+  border-right: $keyColor solid 5px;
+}
+.navfut a{
+  align-content: flex-start;
+  text-align: center;
+  color: $keyColor;
+  text-align: start;
+}
+
     }
     @media screen and (max-width: 600px) {
       #conten {
