--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     font-size: 1.5em;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: center;
+    margin-top: 10em; }
   .main-home {
     display: flex;
     justify-content: center; }
@@ -24,14 +25,19 @@
   .sec1 {
     margin-top: 2em; }
   .mgb4 {
-    margin-bottom: 4em; }
+    margin-bottom: 4em;
+    color: #393E46;
+    border-bottom: #222831 solid 15px;
+    border-radius: 15px;
+    padding-bottom: 5em; }
   .logoimg-home {
     box-sizing: content-box;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    align-content: center; }
+    align-content: center;
+    margin-bottom: 20em; }
   .logohm {
     width: 30em;
     margin-top: -5%;
@@ -43,12 +49,15 @@
     align-items: center;
     text-align: center;
     padding: 0% 35%;
-    margin-top: -5%;
+    margin-top: 5em;
     margin-bottom: 5em; }
   .art-hm {
+    border-top: #222831 solid 20px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    text-align: center; }
+    text-align: center;
+    width: 100%; }
   .fontS {
     font-size: 0.5em; }
   .fontM {
@@ -61,9 +70,9 @@
     justify-content: center;
     align-items: center; }
   .mockup {
-    width: 40em; }
+    width: 100%; }
   .colwh {
-    color: #F1F6F9;
+    color: #393E46;
     margin-top: 2em;
     margin-bottom: 2em; } }
 
@@ -82,7 +91,7 @@
     justify-content: center;
     align-items: center; }
   .mockup {
-    width: 25em; } }
+    width: 100%; } }
 
 body {
   margin: 0%;
@@ -163,11 +172,13 @@ body {
     width: 4em; }
   .fut {
     bottom: 0;
+    background-color: #393E46;
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-grow: 1;
-    justify-content: space-evenly; }
+    justify-content: space-evenly;
+    border-bottom: #222831 solid 2px; }
   .fut a:hover {
     background-color: grey;
     width: auto;
@@ -175,12 +186,12 @@ body {
   .fut-logo {
     width: 5em; }
   .bt-cnt {
-    background-color: #F1F6F9;
+    background-color: #22283120;
     text-align: center;
     align-items: center;
     border: #F1F6F9 solid 2px;
     border-radius: 5px;
-    margin: 5em 0;
+    margin: 3em 0;
     font-size: 2em;
     width: 10em;
     padding: .5%; }
@@ -192,7 +203,22 @@ body {
   .rigths {
     margin: 3% 0%;
     color: #F1F6F9;
-    font-size: 0.5em; } }
+    font-size: 0.5em; }
+  .navfut {
+    display: flex;
+    flex-direction: column;
+    color: #F1F6F9;
+    text-align: start;
+    text-decoration: underline;
+    margin-top: 5em;
+    margin-left: -60%;
+    padding-right: 20%;
+    border-right: #F1F6F9 solid 5px; }
+  .navfut a {
+    align-content: flex-start;
+    text-align: center;
+    color: #F1F6F9;
+    text-align: start; } }
 
 @media screen and (max-width: 600px) {
   .posit-footer {
@@ -204,7 +230,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     background-color: #393E46; }
   .fut-logo {
@@ -228,7 +254,21 @@ body {
     transition: all 1s ease; }
     .bt-cnt a:hover {
       background-color: #222831;
-      color: white; } }
+      color: white; }
+  .navfut {
+    background-color: #393E46;
+    display: flex;
+    flex-direction: column;
+    color: #F1F6F9;
+    text-align: start;
+    padding: 5%;
+    text-decoration: underline;
+    border-right: #F1F6F9 solid 5px; }
+  .navfut a {
+    align-content: flex-start;
+    text-align: center;
+    color: #F1F6F9;
+    text-align: start; } }
 
 @media screen and (min-width: 600px) {
   .hh-serv {
@@ -307,6 +347,9 @@ body {
     padding: 4%; }
   .bt-pos {
     padding: 10% 10% 5% 10%; } }
+
+#parche {
+  margin-top: 15%; }
 
 @media screen and (min-width: 600px) {
   .hecon {
@@ -408,7 +451,21 @@ body {
     border: 1px solid #393E46; }
   .formulario textarea:focus {
     outline: 0;
-    border: 1px solid #393E46; } }
+    border: 1px solid #393E46; }
+  .navfut {
+    display: flex;
+    flex-direction: column;
+    color: #F1F6F9;
+    text-align: start;
+    text-decoration: underline;
+    margin-left: -60%;
+    padding-right: 20%;
+    border-right: #F1F6F9 solid 5px; }
+  .navfut a {
+    align-content: flex-start;
+    text-align: center;
+    color: #F1F6F9;
+    text-align: start; } }
 
 @media screen and (max-width: 600px) {
   #conten {
