--- a/scss/_nuestroTrabajo.scss
+++ b/scss/_nuestroTrabajo.scss
@@ -6,56 +6,18 @@ $mainFont: 'Open sans', 'sans-serif';
 $fontL: 2em;
 $fontM: 1.5em;
 $fontS: .5em;
-/*extends*/
-.centrado {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+.head-nt{
+    margin: 5% 8% 15% 8%;
+    padding: 12%;
+    color: #393E46;
 }
-.cls-extend1{
-    width: 20em;
-    height: 10em;
-    margin-top: 5em;
-    border: #393E46 solid 5px;
-    display: flex;
-    justify-content: center;
-    text-align: center
+.aaaa{
+    margin: 10em 0;
 }
-.cls-extend2 {
-    @extend .cls-extend1;
-    margin-bottom: 5em;
-    padding: 2%;
+.marg-nt{
+    margin-top: 10em;
 }
-.cls-extend3 {
-    @extend .cls-extend2;
-    background-color: aqua;
-}
-/*mixin*/
-@mixin text($size, $color, $decor){
-    font-size: $size;
-    color: $color;
-    text-decoration: $decor;
-}
-h4 {
-    @include text (5em, aqua, underline)
-}
-/*maps*/
-$colorp:(
-    'u': #4267B3,
-    'd': #E9EBEE,
-    't': #90949C,
-    'c': #616771,
-);
-.centrado2{
-    @extend .centrado;
-    flex-direction: unset;
-    flex-wrap: wrap;
-}
-.secej{
-    width: 5em;
-    color: map-get($map: $colorp, $key: 'u');
-    background-color: map-get($map: $colorp, $key: 'd' );
-    border: map-get($map: $colorp, $key:'u' ) solid 5px;
-    margin: 2%;
+#parch{
+    background-color: $keyColor;
 }
