--- a/scss/_quienesSomos.scss
+++ b/scss/_quienesSomos.scss
@@ -1,73 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 $mainColor: #393E46;
 $secondaryColor: #222831;
 $keyColor: #F1F6F9;
+$keyColor20: #F1F6F920;
 $mainFont: 'Open sans', 'sans-serif';
 $fontL: 2em;
 $fontM: 1.5em;
 $fontS: .5em;
-@media screen and (min-width:600px) {
-.hd-qs{
-    font-size: $fontL;
-    align-content: center;
-    text-align: center;
+.main-qs{
+    width: 100;
+    margin-top: 5em;
+    padding: 2.5%;
+}
+.header-qs{
+@extend .main-qs;
+color: $mainColor;
+margin-bottom: 20%;
+padding: 5%;
+}
+.header-qs h2{
+    font-size: 2em;
+}
+.cards-qs{
+    width: 100%;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    margin: 8em;
-}
-.box-qs{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     flex-wrap: wrap;
-    flex-grow: 1;
-    text-align: center;
-    margin-bottom: 15em;
+    margin-bottom: 8em;
 }
-.sec-qs{
-    border: $keyColor solid .5em;
-    background-color: $mainColor;
+.card{
+border-radius: 15px;
+width: 30em;
+height: auto;
+border: $mainColor solid 20px;
+margin: 2em;
+
+}
+.card:hover{
+   border: $secondaryColor solid 20px;
+   -webkit-box-shadow: 18px 76px 241px -29px rgba(0,0,0,0.38);
+-moz-box-shadow: 18px 76px 241px -29px rgba(0,0,0,0.38);
+box-shadow: 18px 76px 241px -29px rgba(0,0,0,0.38);
+}
+.art-nt-img{
+    width: 100%;
+    height: 100%;
+    max-height: 20em;
+    overflow: hidden;
+}
+.art-img{
+width: 100%;
+}
+.art-tit{
+    font-size: $fontM;
+    background-color: #222831;
     color: $keyColor;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    margin-top: -8px;
     padding: 5%;
-    width: 40em;
-    height: 20em;
-    border-radius: 15px;
-&:hover{
-    border-radius: 5px;
-    background-color: #393E4695;
-    border: #222831 solid .2em;
-    -webkit-box-shadow: -1px 9px 5px 0px rgba(0,0,0,0.3);
--moz-box-shadow: -1px 9px 5px 0px rgba(0,0,0,0.3);
-box-shadow: -1px 9px 5px 0px rgba(0,0,0,0.3);
 }
-}
-}
-@media screen and (max-width:600px) {
-.hd-qs{
-    text-align: center;
-    padding: 2%;
-    margin: 2em 0 1em 0;
-}
-.box-qs{
+.art-text{
+    font-size: 1em;
     padding: 5%;
-    margin-bottom: 5em;
 }
-.sec-qs{
-    border-radius: 5px;
-    margin: 0 0 2em 0;
-    padding: 5%;
-    animation-name: breath;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-}
-@keyframes breath {
-    0% {background-color: $keyColor;}
-    25% {background-color: $mainColor; color: white;}
-    50% {background-color: $secondaryColor;}
-    75% {background-color:$mainColor;}
-    100%{background-color: $keyColor;}
-    
-  }
-}   
