que boludo que soy

--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ body {
       background-color: #393E4620;
       color: #393E46; }
   .sections-serv {
-    background-color: #393E46;
+    background-color: #F7EC09;
     height: 8em;
     color: #F1F6F9;
     display: flex;
@@ -321,7 +321,7 @@ body {
   .sectopms-serv2 {
     width: 100%;
     height: 10em;
-    background-color: #393E4650;
+    background-color: #3EC70B;
     color: #F1F6F9;
     justify-content: center;
     text-align: center;
