--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -3,11 +3,13 @@ $mainColor: #393E46;
 $secondaryColor: #222831;
 $keyColor: #F1F6F9;
 $mainFont: 'Open sans', 'sans-serif';
-$fontL: 2em;
-$fontM: 1.5em;
-$fontS: .5em;
-@media screen and (min-width:600px) {
+$colores: (
+    "a": #F7EC09,
+    "b": #3EC70B,
+    "c": #A149FA,
+);
 
+@media screen and (min-width:600px) {
 .hh-serv{
     text-align: center;
 }
@@ -36,7 +38,7 @@ $fontS: .5em;
     }
 }
 .sections-serv{
-    background-color: #393E46;
+    background-color: map-get($map: $colores, $key:'a');
     height: 8em;
     color: $keyColor;
     display: flex;
@@ -49,7 +51,7 @@ $fontS: .5em;
 .sectopms-serv2{
     width: 100%;
     height: 10em;
-    background-color: #393E4650;
+    background-color: map-get($map: $colores, $key:'b' );
     color: #F1F6F9;
     justify-content: center;
     text-align: center;
